--- a/CT2/MD5/.vscode/launch.json
+++ b/CT2/MD5/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/bin/Debug/net7.0/MD5.dll",
-            "args": [],
+            "args": ["/home/konnnst/Desktop/ct"],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopAtEntry": false
